k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fastapi-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: fastapi

  template:
    metadata:
      labels:
        app: fastapi

    spec:
      containers:
        - name: fastapi-container

          image: task-api:latest

          imagePullPolicy: Never

          ports:
            - containerPort: 8000
