k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: fastapi-service

spec:
  selector:
    app: fastapi

  type: NodePort

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30080
